--- a/0721/0721/0721.vcxproj
+++ b/0721/0721/0721.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="02_상속과정에서객체생성.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="03_상속과객체초기화.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
