--- a/0722_계좌관리프로그램/0722_계좌관리프로그램/0722_계좌관리프로그램.vcxproj.filters
+++ b/0722_계좌관리프로그램/0722_계좌관리프로그램/0722_계좌관리프로그램.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="MyFile.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FaithAccount.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ContriAccount.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="std.h">
@@ -63,6 +69,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MyFile.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FaithAccount.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ContriAccount.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
